[gd_scene load_steps=12 format=3 uid="uid://m8govf7lymjr"]

[ext_resource type="Script" path="res://Game/Scripts/MissileEnemy.gd" id="1_j0pep"]
[ext_resource type="PackedScene" uid="uid://dw8k4kjg8uyqy" path="res://Game/OtherScenes/enemy_missile.tscn" id="2_061dh"]
[ext_resource type="Texture2D" uid="uid://dluk6pg6m0duo" path="res://Game/Sprites/SmallMissileEnemy.png" id="3_0iso0"]
[ext_resource type="Texture2D" uid="uid://br8fnqya4gq82" path="res://Game/Sprites/Space_Game_Enemy_Death_Sparks.png" id="3_dbcmt"]
[ext_resource type="Script" path="res://Game/Scripts/SetAnimationDefault.gd" id="5_cnkh5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pgj0h"]
atlas = ExtResource("3_dbcmt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkux3"]
atlas = ExtResource("3_dbcmt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcf8g"]
atlas = ExtResource("3_0iso0")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qo6lj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgj0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkux3")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcf8g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sylvt"]
size = Vector2(15.5, 15.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ras1d"]
size = Vector2(11, 12)

[node name="MissileEnemy" type="AnimatableBody2D" groups=["capturable_enemies", "enemy_kill", "missile_enemy"]]
position = Vector2(100, -41)
rotation = -3.14159
script = ExtResource("1_j0pep")
enemy_missile = ExtResource("2_061dh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_qo6lj")
animation = &"death"
script = ExtResource("5_cnkh5")

[node name="ShootLocation" type="Marker2D" parent="."]
position = Vector2(13, 0)
rotation = 3.14159

[node name="Area2D" type="Area2D" parent="."]

[node name="EnemyHitbox" type="CollisionShape2D" parent="Area2D" groups=["enemy_hitbox"]]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_sylvt")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="EnemyHurtbox" type="CollisionShape2D" parent="." groups=["enemy_hitbox"]]
position = Vector2(0.499977, -0.999996)
shape = SubResource("RectangleShape2D_ras1d")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
